# mdp-jade-piece

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
docs/: table_mapping.md
k8s/: main.yaml
src/mdp_jade_piece/: definitions.py
src/mdp_jade_piece/defs/: config.py  external_assets.py
src/mdp_jade_piece/defs/dbt/: assets.py  jobs.py  sensors.py
src/mdp_jade_piece/defs/dbt/project/: dbt_project.yml  profiles.prod.yml  profiles.yml
src/mdp_jade_piece/defs/dbt/project/models/silver/: _sources.yml
src/mdp_jade_piece/defs/dbt/project/models/silver/delivery_part/: silver_delivery_part_bx.sql  silver_delivery_part_bx.yml  silver_delivery_part_mu.sql  silver_delivery_part_mu.yml
src/mdp_jade_piece/defs/dbt/project/models/silver/linkage_jade_irium/: silver_linkage_jade_irium.sql  silver_linkage_jade_irium.yml
src/mdp_jade_piece/defs/dbt/project/models/silver/order_part/: silver_order_part_bx.sql  silver_order_part_bx.yml  silver_order_part_mu.sql  silver_order_part_mu.yml
src/mdp_jade_piece/defs/dbt/project/models/silver/order_part_sales/: silver_order_part_sales.sql  silver_order_part_sales.yml  silver_order_part_sales_bx.sql  silver_order_part_sales_bx.yml  silver_order_part_sales_mu.sql  silver_order_part_sales_mu.yml
src/mdp_jade_piece/defs/dlt/: assets.py  configs.py  jobs.py  resources.py  schedules.py
src/mdp_jade_piece/defs/dlt/sources/as400/: dlt_source.py  unload_direct.py
src/mdp_jade_piece/defs/dlt/sources/informix/: dlt_source.py  extract.py
tests/: test_extraction.py
(+6 files in other folders)
